@@ -62,6 +62,8 @@ import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 public class GCSFileIOTest {
   private static final String TEST_BUCKET = "TEST_BUCKET";
@@ -202,24 +204,17 @@ public class GCSFileIOTest {
         .isEqualTo(1);
   }
 
-  @Test
-  public void testGCSFileIOKryoSerialization() throws IOException {
+  @ParameterizedTest
+  @MethodSource("org.apache.iceberg.TestHelpers#serializers")
+  public void testGCSFileIOSerialization(
+      TestHelpers.RoundTripSerializer<FileIO> roundTripSerializer)
+      throws IOException, ClassNotFoundException {
+
     FileIO testGCSFileIO = new GCSFileIO();
 
     // gcs fileIO should be serializable when properties are passed as immutable map
-    testGCSFileIO.initialize(ImmutableMap.of("k1", "v1"));
-    FileIO roundTripSerializedFileIO = TestHelpers.KryoHelpers.roundTripSerialize(testGCSFileIO);
-
-    assertThat(testGCSFileIO.properties()).isEqualTo(roundTripSerializedFileIO.properties());
-  }
-
-  @Test
-  public void testGCSFileIOJavaSerialization() throws IOException, ClassNotFoundException {
-    FileIO testGCSFileIO = new GCSFileIO();
-
-    // gcs fileIO should be serializable when properties are passed as immutable map
-    testGCSFileIO.initialize(ImmutableMap.of("k1", "v1"));
-    FileIO roundTripSerializedFileIO = TestHelpers.roundTripSerialize(testGCSFileIO);
+    testGCSFileIO.initialize(ImmutableMap.of("k1", "v1", "k2", "v2"));
+    FileIO roundTripSerializedFileIO = roundTripSerializer.apply(testGCSFileIO);
 
     assertThat(testGCSFileIO.properties()).isEqualTo(roundTripSerializedFileIO.properties());
   }
@@ -410,20 +405,55 @@ public class GCSFileIOTest {
     }
   }
 
-  @Test
-  public void fileIOWithStorageCredentialsKryoSerialization() throws IOException {
+  @ParameterizedTest
+  @MethodSource("org.apache.iceberg.TestHelpers#serializers")
+  public void fileIOWithStorageCredentialsSerialization(
+      TestHelpers.RoundTripSerializer<GCSFileIO> roundTripSerializer)
+      throws IOException, ClassNotFoundException {
     GCSFileIO fileIO = new GCSFileIO();
     fileIO.setCredentials(
         ImmutableList.of(
             StorageCredential.create("prefix", Map.of("key1", "val1", "key2", "val2"))));
     fileIO.initialize(Map.of());
 
-    assertThat(TestHelpers.KryoHelpers.roundTripSerialize(fileIO).credentials())
-        .isEqualTo(fileIO.credentials());
+    assertThat(roundTripSerializer.apply(fileIO).credentials()).isEqualTo(fileIO.credentials());
   }
 
-  @Test
-  public void fileIOWithPrefixedStorageClientKryoSerialization() throws IOException {
+  @ParameterizedTest
+  @MethodSource("org.apache.iceberg.TestHelpers#serializers")
+  public void fileIOWithPrefixedStorageClientWithoutCredentialsSerialization(
+      TestHelpers.RoundTripSerializer<GCSFileIO> roundTripSerializer)
+      throws IOException, ClassNotFoundException {
+    GCSFileIO fileIO = new GCSFileIO();
+    fileIO.initialize(
+        Map.of(GCS_OAUTH2_TOKEN, "gcsTokenFromProperties", GCS_OAUTH2_TOKEN_EXPIRES_AT, "1000"));
+
+    assertThat(fileIO.client("gs")).isInstanceOf(Storage.class);
+    assertThat(fileIO.client("gs://bucket1/my-path/tableX")).isInstanceOf(Storage.class);
+    assertThat(fileIO.client("gs://bucket1/my-path/tableX").getOptions().getCredentials())
+        .isInstanceOf(OAuth2Credentials.class)
+        .extracting("value")
+        .extracting("temporaryAccess")
+        .isEqualTo(new AccessToken("gcsTokenFromProperties", new Date(1000L)));
+
+    GCSFileIO roundTripIO = roundTripSerializer.apply(fileIO);
+    assertThat(roundTripIO).isNotNull();
+    assertThat(roundTripIO.credentials()).isEqualTo(fileIO.credentials()).isEmpty();
+
+    assertThat(roundTripIO.client("gs")).isInstanceOf(Storage.class);
+    assertThat(roundTripIO.client("gs://bucket1/my-path/tableX")).isInstanceOf(Storage.class);
+    assertThat(roundTripIO.client("gs://bucket1/my-path/tableX").getOptions().getCredentials())
+        .isInstanceOf(OAuth2Credentials.class)
+        .extracting("value")
+        .extracting("temporaryAccess")
+        .isEqualTo(new AccessToken("gcsTokenFromProperties", new Date(1000L)));
+  }
+
+  @ParameterizedTest
+  @MethodSource("org.apache.iceberg.TestHelpers#serializers")
+  public void fileIOWithPrefixedStorageClientSerialization(
+      TestHelpers.RoundTripSerializer<GCSFileIO> roundTripSerializer)
+      throws IOException, ClassNotFoundException {
     GCSFileIO fileIO = new GCSFileIO();
     fileIO.setCredentials(
         ImmutableList.of(
@@ -445,7 +475,7 @@ public class GCSFileIOTest {
         .extracting("temporaryAccess")
         .isEqualTo(new AccessToken("gcsTokenFromCredential", new Date(2000L)));
 
-    GCSFileIO roundTripIO = TestHelpers.KryoHelpers.roundTripSerialize(fileIO);
+    GCSFileIO roundTripIO = roundTripSerializer.apply(fileIO);
     assertThat(roundTripIO).isNotNull();
     assertThat(roundTripIO.credentials()).isEqualTo(fileIO.credentials());
 
@@ -458,57 +488,22 @@ public class GCSFileIOTest {
         .isEqualTo(new AccessToken("gcsTokenFromCredential", new Date(2000L)));
   }
 
-  @Test
-  public void fileIOWithStorageCredentialsJavaSerialization()
+  @ParameterizedTest
+  @MethodSource("org.apache.iceberg.TestHelpers#serializers")
+  public void resolvingFileIOLoadWithoutStorageCredentials(
+      TestHelpers.RoundTripSerializer<ResolvingFileIO> roundTripSerializer)
       throws IOException, ClassNotFoundException {
-    GCSFileIO fileIO = new GCSFileIO();
-    fileIO.setCredentials(
-        ImmutableList.of(
-            StorageCredential.create("prefix", Map.of("key1", "val1", "key2", "val2"))));
-    fileIO.initialize(Map.of());
+    ResolvingFileIO resolvingFileIO = new ResolvingFileIO();
+    resolvingFileIO.initialize(ImmutableMap.of());
 
-    assertThat(TestHelpers.roundTripSerialize(fileIO).credentials())
-        .isEqualTo(fileIO.credentials());
+    ResolvingFileIO fileIO = roundTripSerializer.apply(resolvingFileIO);
+    assertThat(fileIO.credentials()).isEmpty();
   }
 
-  @Test
-  public void fileIOWithPrefixedStorageClientJavaSerialization()
-      throws IOException, ClassNotFoundException {
-    GCSFileIO fileIO = new GCSFileIO();
-    fileIO.setCredentials(
-        ImmutableList.of(
-            StorageCredential.create(
-                "gs://bucket1",
-                ImmutableMap.of(
-                    "gcs.oauth2.token",
-                    "gcsTokenFromCredential",
-                    "gcs.oauth2.token-expires-at",
-                    "2000"))));
-    fileIO.initialize(
-        Map.of(GCS_OAUTH2_TOKEN, "gcsTokenFromProperties", GCS_OAUTH2_TOKEN_EXPIRES_AT, "1000"));
-
-    assertThat(fileIO.client("gs")).isInstanceOf(Storage.class);
-    assertThat(fileIO.client("gs://bucket1/my-path/tableX")).isInstanceOf(Storage.class);
-    assertThat(fileIO.client("gs://bucket1/my-path/tableX").getOptions().getCredentials())
-        .isInstanceOf(OAuth2Credentials.class)
-        .extracting("value")
-        .extracting("temporaryAccess")
-        .isEqualTo(new AccessToken("gcsTokenFromCredential", new Date(2000L)));
-
-    GCSFileIO roundTripIO = TestHelpers.roundTripSerialize(fileIO);
-    assertThat(roundTripIO.credentials()).isEqualTo(fileIO.credentials());
-
-    assertThat(roundTripIO.client("gs")).isInstanceOf(Storage.class);
-    assertThat(roundTripIO.client("gs://bucket1/my-path/tableX")).isInstanceOf(Storage.class);
-    assertThat(roundTripIO.client("gs://bucket1/my-path/tableX").getOptions().getCredentials())
-        .isInstanceOf(OAuth2Credentials.class)
-        .extracting("value")
-        .extracting("temporaryAccess")
-        .isEqualTo(new AccessToken("gcsTokenFromCredential", new Date(2000L)));
-  }
-
-  @Test
-  public void resolvingFileIOLoadWithStorageCredentials()
+  @ParameterizedTest
+  @MethodSource("org.apache.iceberg.TestHelpers#serializers")
+  public void resolvingFileIOLoadWithStorageCredentials(
+      TestHelpers.RoundTripSerializer<ResolvingFileIO> roundTripSerializer)
       throws IOException, ClassNotFoundException {
     StorageCredential credential = StorageCredential.create("prefix", Map.of("key1", "val1"));
     List<StorageCredential> storageCredentials = ImmutableList.of(credential);
@@ -527,22 +522,8 @@ public class GCSFileIOTest {
         .extracting(GCSFileIO::credentials)
         .isEqualTo(storageCredentials);
 
-    // make sure credentials are still present after kryo serde
-    ResolvingFileIO fileIO = TestHelpers.KryoHelpers.roundTripSerialize(resolvingFileIO);
-    assertThat(fileIO.credentials()).isEqualTo(storageCredentials);
-    result =
-        DynMethods.builder("io")
-            .hiddenImpl(ResolvingFileIO.class, String.class)
-            .build(fileIO)
-            .invoke("gs://foo/bar");
-    assertThat(result)
-        .isInstanceOf(GCSFileIO.class)
-        .asInstanceOf(InstanceOfAssertFactories.type(GCSFileIO.class))
-        .extracting(GCSFileIO::credentials)
-        .isEqualTo(storageCredentials);
-
-    // make sure credentials are still present after java serde
-    fileIO = TestHelpers.roundTripSerialize(resolvingFileIO);
+    // make sure credentials are still present after serde
+    ResolvingFileIO fileIO = roundTripSerializer.apply(resolvingFileIO);
     assertThat(fileIO.credentials()).isEqualTo(storageCredentials);
     result =
         DynMethods.builder("io")
